--- a/Smiling_Tigers/Smiling_Tigers_-_Home_files/Smiling_Tigers_-_Home.css
+++ b/Smiling_Tigers/Smiling_Tigers_-_Home_files/Smiling_Tigers_-_Home.css
@@ -83,6 +83,9 @@
 .graphic_textbox_layout_style_default_External_147_100 {
     position: relative;
 }
+.graphic_textbox_layout_style_default_External_679_154 {
+    position: relative;
+}
 .graphic_textbox_style_default_SkipStroke {
     background: transparent;
     opacity: 1.00;
