fix book now text

--- a/Smiling_Tigers/Smiling_Tigers_-_Home_files/Smiling_Tigers_-_Home.css
+++ b/Smiling_Tigers/Smiling_Tigers_-_Home_files/Smiling_Tigers_-_Home.css
@@ -86,6 +86,9 @@
 .graphic_textbox_layout_style_default_External_679_154 {
     position: relative;
 }
+.graphic_textbox_layout_style_default_External_96_28 {
+    position: relative;
+}
 .graphic_textbox_style_default_SkipStroke {
     background: transparent;
     opacity: 1.00;
